<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BreizhLib</string>
    <string name="server_url">http://breizh-lib.appspot.com/</string>

    <string name="nouvelleVersion">Nouvelle version disponible</string>
    <string name="versionDisponible">La version %1$s est disponible!</string>
    <string name="resToastText">une erreur est survenue</string>

    <!-- splash screen -->
    <string name="splash_text">BreizhLib</string>
    <string name="bunjix">BreizhJug application</string>

    <!-- Menu -->
    <string name="ouvrages">Ouvrages</string>
    <string name="commentaires">Commentaires</string>
    <string name="profil">Profil</string>
    <string name="reservations">Reservations</string>
    <string name="scanner">Scanner</string>
    <string name="compte">Compte</string>
    <string name="search">Recherche</string>
    <string name="emprunts">Emprunts</string>


    <!-- livre -->
    <string name="avisBtn">Votre Avis</string>
    <string name="indispoBtn">Indisponible</string>
    <string name="reserveBtn">Réservé</string>
    <string name="nonDispoBtn">Non disponible</string>
    <string name="ajoutOK">Livre Ajouté</string>
    <string name="ajouterBtn">Ajouter</string>

    <!-- commentaire-->
    <string name="commentaireMsgTitle">Commentaire de l\'ouvrage</string>
    <string name="commentaireSave">Commentaire enregistré</string>

    <!-- credit -->
    <string name="credits">Application Android BreizhLib</string>
    <string name="contact">Auteur : Guernion Sylvain</string>
    <string name="contactWeb">Site :
        <a href="http://breizh-lib.appspot.com/android">breizh-lib.appspot.com</a>
    </string>
    <string name="version">Version :</string>

    <!-- Activity title -->
    <string name="commentaires_title">Commentaires</string>
    <string name="credits_title">BreizhLib</string>
    <string name="emprunts_title">Emprunts</string>
    <string name="menu_title">BreizhLib</string>
    <string name="ouvrages_title">Ouvrages</string>
    <string name="reservations_title">Réservations</string>
    <string name="profil_title">Profil</string>
    <string name="search_title">Recherche</string>
    <string name="compte_title">Compte</string>








    <!-- contextMenu -->
    <string name="shareText">BreizhLib, l\'application Android pour vous faciliter l\'utilisation de la bibliothèque du
        BreizhJug : http://goo.gl/9JXfD
    </string>
    <string name="share">Partager</string>
    <string name="exit">Quitter</string>
    <string name="connexionBtn">Comptes</string>
    <string name="menu">Menu</string>
    <string name="parametres">Paramètres</string>
    <string name="apropos">A propos</string>


    <!-- app_info -->
    <string name="chargement_profil">Chargement de vos informations</string>

    <string name="find_data">Recherche de vos informations</string>
    <string name="data_unavailable">Information indisponible</string>
    <string name="upcoming">Prochainement</string>


    <!-- avis -->
    <string name="nom">Nom :</string>
    <string name="avis">Votre Avis :</string>
    <string name="commentaire_send">Envoi de votre commentaire</string>


    <!-- reservation -->
    <string name="prenom">Prenom :</string>
    <string name="email">Email :</string>
    <string name="reserverBtn">Réserver</string>
    <string name="no_reservation">Aucune réservation</string>
    <string name="send_data">Envoi des données</string>
    <string name="annulation_en_cours">Annulation en cours</string>




    <!-- configuration -->
    <string name="descriptionParametrage">Modifier les paramètres de l\'application</string>
    <string name="ouvrageGrid">activer le mode Grid</string>
    <string name="cache">Vider le cache mémoire</string>
    <string name="cacheImg">Vider le cache images</string>
    <string name="cacheDb">Vider le cache base</string>
    <string name="cacheTitre">Cache</string>
    <string name="freq_title">Fréquence de mise à jour des données</string>

    <!-- scan -->
    <string name="isbn_scan_titre_ok">Isbn identifié</string>
    <string name="isbn_scan_titre_ko">isbn non reconnu</string>
    <string name="isbn_scan_msg_ko">Il ne s\'agit pas d\'un code isbn13</string>
    <string name="isbn_scan_msg_ok">isbn :</string>

    <!-- generique -->
    <string name="valider">Valider</string>
    <string name="retour">Retour</string>
    <string name="rechercher">Rechercher</string>
    <string name="ok">OK</string>
    <string name="annuler">Annuler</string>
    <string name="connexion">Connexion</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="recherche">Recherche</string>
    <string name="chargement">Chargement</string>


    <!-- Errors-->
    <string name="error">Error</string>
    <string name="nom_validation_msg">Nom non renseigné</string>
    <string name="avis_validation_msg">Avis non renseigné</string>
    <string name="prenom_validation_msg">Prénom non renseigné</string>
    <string name="email_validation_msg">Email non renseigné</string>
    <string name="connexion_required">Vous devez être connecté</string>
    <string name="error_server_connexion">Erreur de connexion</string>



    <string name="commentaire_validation_msg">Commentaire non renseigné</string>
    <string name="commentaire_send_error">Erreur lors de l\'envoi du commentaire</string>
    <string name="no_info">Aucune information </string>


    <string name="connexion_required">Vous devez être connecté</string>
    <string name="connexion_error">Erreur de connexion</string>
    <string name="add_error">Erreur lors de l\'ajout</string>




    <!-- Permission label -->
    <string
            name="permlab_samplesyncadapterAuthPassword">access to passwords for Sample SyncAdapter accounts</string>
    <!-- Permission description -->
    <string
            name="permdesc_samplesyncadapterAuthPassword">Allows applications direct access to the passwords for the
        Sample SyncAdapter account(s) you have configured.</string>

    <!-- Permission label -->
    <string
            name="permlab_samplesyncadapterAuth">view configured accounts</string>
    <!-- Permission description -->
    <string
            name="permdesc_samplesyncadapterAuth">Allows applications to see the usernames (email addresses) of
        the Sample SyncAdapter account(s) you have configured.</string>
    <string
            name="notification_login_error">Touch to sign into your Sample SyncAdapter account.</string>

    <!-- Title string for Login activity-->
    <string
            name="ui_activity_title">Connexion</string>
    <string
            name="ui_activity_authenticating">Authentication</string>
    <skip />
    <string
            name="login_activity_username_label">Username</string>
    <string
            name="login_activity_password_label">Password</string>
    <string
            name="login_activity_ok_button">Connexion</string>

    <!-- Message shown in dialog if the username or password is invalid. -->
    <string
            name="login_activity_loginfail_text_both">le nom d\'utilisateur ou le password n\'est pas valide. Un compte est requis. </string>
    <!-- Message shown in dialog if the password is invalid -->
    <string
            name="login_activity_loginfail_text_pwonly">You entered the wrong password or your account has changed.
        Please re-enter your password.</string>
    <!-- Message shown in dialog to prompt the user for their password -->
    <string
            name="login_activity_loginfail_text_pwmissing">mot de passe requis.</string>
    <!--
        Message shown if the provided account doesn't support the current
        activity.
    -->
    <string
            name="login_activity_newaccount_text">Inscription </string>

    <!-- Button that takes the user to the "sign in" screen -->
    <string
            name="sign_in_button_label">Inscription</string>
    <!-- Button for going to the previous screen or step -->
    <string
            name="back_button_label">Back</string>
    <string name="profile_action">Sample profile</string>
    <string name="view_profile">View Profile</string>


</resources>
