<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:src="@drawable/icon"/>

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/app_name"/>

        </RelativeLayout>

        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textSize="18sp"
                  android:layout_margin="10sp"
                  android:text="@string/credits"/>

        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textSize="18sp"
                  android:layout_margin="10sp"
                  android:text="@string/contact"/>

        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:layout_marginTop="5sp"
                  android:layout_marginLeft="10sp"
                  android:focusable="true"
                  android:clickable="true"
                  android:linksClickable="false"
                  android:text="@string/contactWeb"
                  android:onClick="web"/>

    </LinearLayout>

</ScrollView>