<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1">
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingTop="5dip"
                android:paddingBottom="13dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip">

            <TextView android:id="@+id/nom"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:textSize="16px"
                      android:textStyle="bold"
                      android:text="@string/nom"
                    />
            <EditText
                    android:id="@+id/nomEdit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:autoText="false"
                    android:capitalize="none"
                    />

            <TextView android:id="@+id/email"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:textSize="16px"
                      android:textStyle="bold"
                      android:text="@string/email"
                    />
            <EditText
                    android:id="@+id/emailEdit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:autoText="false"
                    android:capitalize="none"
                    />
        </LinearLayout>
    </ScrollView>
    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#c6c3c6"
            android:minHeight="54dip"
            android:paddingTop="4dip"
            android:paddingLeft="2dip"
            android:paddingRight="2dip">
        <Button
                android:id="@+id/send"
                android:text="@string/reserverBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:minWidth="100dip"
                android:onClick="onSend"
                />
    </FrameLayout>
</LinearLayout>